...
        if (drawBackgroundBlur && fullAppBarBlur && backdrop != null) {
            MusicAppBarBlur(backdrop, fullAppBarBlur = fullAppBarBlur, includeSystemInset = false)
        }
        Layout(modifier = Modifier.fillMaxWidth().height(MusicAppBarHeight), content = {
            Row(verticalAlignment = Alignment.CenterVertically, horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                if (onBack != null) AppBarButton(onClick = onBack) {
                    Icon(Icons.AutoMirrored.Rounded.ArrowBack, "返回")
                }
            }
            Row(verticalAlignment = Alignment.CenterVertically, horizontalArrangement = Arrangement.spacedBy(8.dp), content = actions)
            Box {
                if (title != null) Text(title,
                    modifier = Modifier.graphicsLayer { alpha = titleAlpha() }
...
